// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > Snapshots > renders default layout correctly 1`] = `
"
 ██████╗  █████╗ 
 ██╔═══██╗██╔══██╗  OpenAgent v1.2.3
 ██║   ██║███████║
 ██║   ██║██╔══██║
 ╚██████╔╝██║  ██║  Not authenticated · /auth
  ╚═════╝ ╚═╝  ╚═╝


Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results






















Notifications

Composer
"
`;

exports[`App > Snapshots > renders screen reader layout correctly 1`] = `
"Notifications
Footer

 ██████╗  █████╗ 
 ██╔═══██╗██╔══██╗  OpenAgent v1.2.3
 ██║   ██║███████║
 ██║   ██║██╔══██║
 ╚██████╔╝██║  ██║  Not authenticated · /auth
  ╚═════╝ ╚═╝  ╚═╝


Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
Composer
"
`;

exports[`App > Snapshots > renders with dialogs visible 1`] = `
"
 ██████╗  █████╗ 
 ██╔═══██╗██╔══██╗  OpenAgent v1.2.3
 ██║   ██║███████║
 ██║   ██║██╔══██║
 ╚██████╔╝██║  ██║  Not authenticated · /auth
  ╚═════╝ ╚═╝  ╚═╝





























Notifications

DialogManager
"
`;

exports[`App > should render ToolConfirmationQueue along with Composer when tool is confirming and experiment is on 1`] = `
"
 ██████╗  █████╗ 
 ██╔═══██╗██╔══██╗  OpenAgent v1.2.3
 ██║   ██║███████║
 ██║   ██║██╔══██║
 ╚██████╔╝██║  ██║  Not authenticated · /auth
  ╚═════╝ ╚═╝  ╚═╝


Tips for getting started:
1. Create GEMINI.md files to customize your interactions
2. /help for more information
3. Ask coding questions, edit code or run commands
4. Be specific for the best results
HistoryItemDisplay
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│ Action Required                                                                                  │
│                                                                                                  │
│ ?  ls list directory                                                                             │
│                                                                                                  │
│ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ │
│ │ ls                                                                                           │ │
│ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ │
│ Allow execution of [ls]?                                                                         │
│                                                                                                  │
│ ● 1. Allow once                                                                                  │
│   2. Allow for this session                                                                      │
│   3. No, suggest changes (esc)                                                                   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯







Notifications

Composer
"
`;
